Finish quest feature, updated

--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -64,35 +64,43 @@
       <li class="challenge-card is-flex-direction-row">One week with no coffee shop coffee.</li>
     </ul>
 
-  </article>
-
   <article class="ml-5" id="quest-container">
-    <h3 class="has-text-centered" id="quest-header">Earn enough stars and complete quests!</h3>
-    <br>
-    <div class="columns is-multiline is-mobile">
-      <div class="avatar-card column is-one-third-desktop is-half-tablet is-full-mobile">
-        <h4 class="has-text-centered">Complete 5 Personal Challenges and upgrade to:</h4>
-        <img src="https://img.freepik.com/free-vector/cute-astronaut-sitting-gold-coin-cartoon-vector-icon-illustration-science-business-icon-isolated_138676-4472.jpg?w=740&t=st=1676408138~exp=1676408738~hmac=f67ae3189aeee9f4d47d09abb1f850b2ee4dc1993788c02f41306a8e56a80e1a" alt="Avatar 1">
-      </div>
-      <div class="avatar-card column is-one-third-desktop is-half-tablet is-full-mobile">
-        <h4 class="has-text-centered">Complete 10 Personal Challenges and upgrade to:</h4>
-        <img src="https://img.freepik.com/free-vector/cute-astronaut-lifting-money-bag-cartoon-vector-icon-illustration-science-finance-icon-isolated_138676-4495.jpg?w=740&t=st=1676408131~exp=1676408731~hmac=cb9bba6fd41526636e18a89908638fec255ea17730ec0862bdfa15ce0ed77959" alt="Avatar 2">
-      </div>
-      <div class="avatar-card column is-one-third-desktop is-half-tablet is-full-mobile">
-        <h4 class="has-text-centered">Complete 15 Personal Challenges and upgrade to:</h4>
-        <img src="https://img.freepik.com/free-vector/cute-astronaut-holding-money-cartoon-vector-icon-illustration-science-business-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-4271.jpg?w=740&t=st=1676408394~exp=1676408994~hmac=de187a224f203f2406f775cf16dbe346d4772405d86b2c1980e51557e2ed0a2d" alt="Avatar 3">
+  <h3 class="has-text-centered title" id="quest-header">Earn enough stars and complete quests!</h3>
+  <br>
+  <div class="columns is-multiline is-mobile is-flex-direction-mobile-column">
+    <div class="column is-one-third-desktop is-half-tablet is-full-mobile">
+      <div class="card has-text-centered">
+        <h4 class="is-centered title">Complete 5</h4>
+        <img src="https://img.freepik.com/free-vector/cute-astronaut-sitting-gold-coin-cartoon-vector-icon-illustration-science-business-icon-isolated_138676-4472.jpg?w=740&t=st=1676408138~exp=1676408738~hmac=f67ae3189aeee9f4d47d09abb1f850b2ee4dc1993788c02f41306a8e56a80e1a" alt="Avatar 1" class="image is-240x240">
       </div>
     </div>
-    <div class="columns is-multiline is-mobile">
-      <div class="avatar-card column is-one-half-desktop is-half-tablet is-full-mobile">
-        <h4 class="has-text-centered">Complete 15+ Personal Challenges and upgrade to:</h4>
-        <img src="https://img.freepik.com/free-vector/cute-astronaut-with-money-safe-deposit-box-cartoon-vector-icon-illustration-science-finance-icon_138676-5996.jpg?w=740&t=st=1676418908~exp=1676419508~hmac=534b265c8a985b3032ba110e755a7796cc684a8a371552487b57c7d0406e3ec4" alt="Avatar 4">
-      </div>
-      <div class="avatar-card column is-one-half-desktop is-half-tablet is-full-mobile">
-        <h4 class="has-text-centered">Complete 50 Personal Challenges and upgrade to:</h4>
-        <img src="https://img.freepik.com/free-vector/cute-rich-astronaut-with-money-gold-coin-cartoon-vector-icon-illustration-science-finance-icon_138676-6578.jpg?w=740&t=st=1676408127~exp=1676408727~hmac=82d58a989f489cbb359923ab32e454e59d84ced0f3e88deb363b0bb0e3446713" alt="Avatar 5">
+    <div class="column is-one-third-desktop is-half-tablet is-full-mobile">
+      <div class="card has-text-centered">
+        <h4 class="is-centered title">Complete 10</h4>
+        <img src="https://img.freepik.com/free-vector/cute-astronaut-lifting-money-bag-cartoon-vector-icon-illustration-science-finance-icon-isolated_138676-4495.jpg?w=740&t=st=1676408131~exp=1676408731~hmac=cb9bba6fd41526636e18a89908638fec255ea17730ec0862bdfa15ce0ed77959" alt="Avatar 2" class="image is-240x240">
       </div>
     </div>
-  </article>
+    <div class="column is-one-third-desktop is-half-tablet is-full-mobile ">
+      <div class="card has-text-centered">
+        <h4 class="is-centered title">Complete 15</h4>
+        <img src="https://img.freepik.com/free-vector/cute-astronaut-holding-money-cartoon-vector-icon-illustration-science-business-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-4271.jpg?w=740&t=st=1676408394~exp=1676408994~hmac=de187a224f203f2406f775cf16dbe346d4772405d86b2c1980e51557e2ed0a2d" alt="Avatar 3" class="image is-240x240">
+      </div>
+    </div>
+    <div class="column is-one-half-desktop is-half-tablet is-full-mobile">
+      <div class="card has-text-centered">
+        <h4 class="is-centered title">Complete 20</h4>
+        <img src="https://img.freepik.com/free-vector/cute-astronaut-with-money-safe-deposit-box-cartoon-vector-icon-illustration-science-finance-icon_138676-5996.jpg?w=740&t=st=1676418908~exp=1676419508~hmac=534b265c8a985b3032ba110e755a7796cc684a8a371552487b57c7d0406e3ec4" alt="Avatar 4" class="image is-240x240">
+      </div>
+    </div>
+    <div class="column is-one-half-desktop is-half-tablet is-full-mobile">
+      <div class="card has-text-centered">
+        <h4 class="is-centered title">Complete 25+</h4>
+        <img src="https://img.freepik.com/free-vector/cute-rich-astronaut-with-money-gold-coin-cartoon-vector-icon-illustration-science-finance-icon_138676-6578.jpg?w=740&t=st=1676408127~exp=1676408727~hmac=82d58a989f489cbb359923ab32e454e59d84ced0f3e88deb363b0bb0e3446713"
+            alt="Avatar 5" alt="Avatar 5" class="image is-240x240">
+      </div>
+    </div>
+  </div>
+</article>
+  
 </div>
 <script src="./js/addChallenge.js"></script>
