--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
     <div class="column is-half-tablet is-full-mobile has-text-centered m-auto">
       <h1 class="title is-1">Expense Tracker</h1>
 
-      <p class="is-size-5">Welcome to Scrooge! This is a fun and engaging platform that helps you keep track of your expenses and manage your finances. It's a gamified version of a finance app, making budgeting and financial management enjoyable and easy. With its simple and intuitive interface, you can quickly and easily record your income and expenses, so you always have a clear understanding of your financial situation. Start taking control of your finances today with Scrooge!</p>
+      <p class="is-size-5 box">Welcome to Scrooge! This is a fun and engaging platform that helps you keep track of your expenses and manage your finances. It's a gamified version of a finance app, making budgeting and financial management enjoyable and easy. With its simple and intuitive interface, you can quickly and easily record your income and expenses, so you always have a clear understanding of your financial situation. Start taking control of your finances today with Scrooge!</p>
     </div>
   </div>
 </div>
