--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,12 @@ p {
 }
 
 
+.navatar {
+   min-height: 150px;
+   min-width: 150px;
+}
+
+
 @media screen and (max-width: 1024px) {
    .navbar-item {
    display: flex;
